# University-Nebraska-Tutor-Portal

./: .gitignore  .pylintrc  README.md  compose.yml  env.dist  makefile  package-lock.json  package.json  pyproject.toml  split_csv.py
backend/: .bandit  .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  env.dist  erd.dot  generate_ticket.py  makefile  manage.py  pyproject.toml  pytest.ini
backend/api/: admin.py  apps.py  routing.py  serializers.py  views.py  websocket.py
backend/api/data/: semester_data.csv  students.JSON
backend/api/endpoints/: announcement.py  authenticate.py  course.py  hours.py  issue.py  professor.py  section.py  ticket.py  user.py
backend/api/migrations/: 0001_initial.py  0002_alter_issues_managers_alter_semester_managers_and_more.py  0002_alter_ticket_student_alter_ticket_tutor.py  0003_ticket_difficulty_ticket_was_flagged_and_more.py  0004_ticket_asst_tutor_alter_ticket_tutor.py
backend/api/models/: announcement.py  announcement_type.py  color.py  comments.py  course.py  difficulty.py  hours.py  issue.py  loved_comments.py  loved_tickets.py  messages.py  people.py  priority.py  professor.py  roles.py  sections.py  semester.py  status.py  ticket.py  tutor.py  user.py  user_settings.py  work_hours.py
backend/api/scripts/: load_seed.py  load_semester.py  load_students.py
backend/base/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  websocket.py
backend/src/api/data/: class_data.csv
backend/src/api/migrations/: 0001_initial.py  0002_alter_hours_options.py  0002_alter_section_modality.py  0002_alter_ticket_student_alter_ticket_tutor.py  0002_alter_user_managers.py  0002_remove_professor_sections_and_more.py  0002_remove_section_course_alter_section_modality_and_more.py  0002_rename_started_dummy_claimed_dummy_closed.py  0002_ticket_completed_ticket_started.py  0003_delete_ticket.py  0003_hour.py  0004_initial.py  0005_remove_student_courses.py  0006_ticket_tutor_alter_ticket_end_time_and_more.py
backend/src/api/models/: __init__.py  announcement.py  color.py  course.py  dummy.py  hours.py  issue.py  messages.py  professor.py  roles.py  sections.py  student.py  ticket.py  tutor.py  user.py  work_hours.py
backend/src/api/scripts/: load_semester.py  load_students.py  populate_script.py  t_script.py
backend/src/portal/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/portal/migrations/: 0001_initial.py
backend/templates/includes/: base.html  footer.html  sidebar.html
backend/templates/portal/: landing.html
backend/tests/: test_api_course.py  test_api_issue.py  test_api_professor.py  test_api_ticket.py  test_course.py  test_load_csv.py  test_professor.py
base/: settings.py  urls.py
dev/: babel.config.js  package-lock.json  package.json  tailwind.config.js
docs/: Makefile  placeholder.txt
frontend-ts/: .dockerignore  .eslintignore  .eslintrc.cjs  .prettierignore  Dockerfile  components.json  index.html  makefile  package-lock.json  package.json  tsconfig.json  (+2 more)
(+434 files in other folders)
