[tool.poetry]
name = "University-Nebraska-Tutor-Portal"
version = "0.0.1"
description = ""
authors = ["Nolan Gregory <nolangregory@unomaha.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-bootstrap5 = "^23.3"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-bootstrap-v5 = "^1.0.11"
python-dotenv = "^1.0.0"
numpy = "^1.25.2"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
coverage = "^7.2.7"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
pylint = "^2.17.5"
yapf = "^0.40.1"
autoflake = "^2.2.0"
djlint = "^1.32.1"
django-stubs = "^1.2.0"
pytest-django = "^4.5.2"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "base.settings"
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
exclude = [".venv"]
line-length = 100

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = "True"

[tool.django-stubs]
django_settings_module = "base.settings"
strict_settings = "True"

[tool.djlint]
ignore = "H031,H030"
profile = "django"
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "load,extends,include"
close_void_tags="True"

[tool.autoflake]
imports = ["django", "requests", "urllib3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"