[tool.poetry]
name = "University-Nebraska-Tutor-Portal"
version = "0.0.1"
description = "Application to facilitate communication between students and tutors by allowing students to create, manage, and track tickets for tutoring assistance."
authors = ["Nolan Gregory <nolangregory@unomaha.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^4.2.3"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
websockets = "^11.0.3"
channels = {extras = ["daphne"], version = "^4.0.0"}
pandas = "^2.1.1"
django-extensions = "^3.2.3"
bandit = "^1.7.5"

[tool.poetry.group.dev.dependencies]
bruhcolor = "^0.0.56"
pylint = "^3.0.1"
pytest = "^7.4.0"
black = "^23.7.0"
coverage = "^7.2.7"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
yapf = "^0.40.1"
autoflake = "^2.2.0"
django-stubs = "^1.2.0"
pytest-django = "^4.5.2"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
extend-exclude = '''
(
    | settings.py
)
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "base.settings"
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
exclude = [".venv"]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"settings.py" = ["E501"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = "True"

[tool.autoflake]
imports = ["django", "requests", "urllib3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"